<resources>
    <string name="app_name">shop_app</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">Android Studio</string>
    <string name="nav_header_subtitle">android.studio@android.com</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Settings</string>

    <string name="menu_home">Home</string>
    <string name="menu_gallery">Gallery</string>
    <string name="addcart_btn">Add to Cart</string>
    <string name="arg_product_id">PRODUCT_ID</string>
    <string name="arg_category_name">CATEGORY_NAME</string>
    <string name="menu_login">Login</string>
    <string name="menu_logout">Logout</string>
    <string name="username_edittxt">Username</string>
    <string name="password_edittxt">Password</string>
    <string name="login_btn">login</string>
    <string name="error_no_connection">No Internet connection</string>
    <string name="rupee_format">%1$s RS</string>
    <!-- Strings related to login -->
    <string name="prompt_email">Email</string>
    <string name="prompt_password">Password</string>
    <string name="action_sign_in">Sign in or register</string>
    <string name="action_sign_in_short">Sign in</string>
    <string name="welcome">"Welcome!"</string>
    <string name="invalid_username">Not a valid username</string>
    <string name="invalid_password">Password must be >5 characters</string>
    <string name="login_failed">"Login failed"</string>

</resources>